# BlendingBlender

./: LICENSE  README.md  ai_agent.py  audit_log.json  backend.py  director_skill.md  frontend.py  logger_utils.py  pyproject.toml  setup_instructions.md  skill.md
director/: bpy_helpers.py  out.blend  out.blend1  scaffolding.py
scratch/: check_formats.py  check_gp.py  debug_blender.py  debug_connection.py  debug_gp3_data.py  debug_gp3_point.py  debug_gp3_strokes.py  debug_render.py  inspect_ffmpeg.py  inspect_gp3.py  inspect_gp_ops.py  inspect_obj_ops.py  list_mcp_tools.py  start_mcp_server.py  test_1min_director.py  test_gp3_add.py
